--- a/scss/common/_button.scss
+++ b/scss/common/_button.scss
@@ -115,6 +115,7 @@
 
   &::before {
     background-color: $btn-bg-overlay;
+    border-radius: $btn-border-radius;
     content: '';
     display: block;
     opacity: 0;
