--- a/scss/common/_base-override.scss
+++ b/scss/common/_base-override.scss
@@ -20,26 +20,46 @@
   > li {
     margin-right: 1px;
 
-    &.active {
-      > a {
-        color: color-dynamic(unquote('$quaternary'));
+    &.active > a,
+    > a.active {
+      color: color-dynamic(unquote('$quaternary'));
+      opacity: 1;
 
+      body & {
         @include focus-hover {
-          color: $btn-color;
+          background-color: unquote('$quaternary;');
+          color: color-dynamic(unquote('$quaternary'));
+
+          &::before {
+            opacity: 1;
+          }
         }
+      }
+
+      &::before {
+        background-color: $btn-bg-overlay;
+        border-radius: $btn-border-radius;
+        content: '';
+        display: block;
+        opacity: 0;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
       }
     }
 
     > a {
       @extend %btn-flat;
 
-      display: block;
-
-      &.active {
-        color: color-dynamic(unquote('$quaternary'));
+      body & {
+        display: block;
+        opacity: $nav-link-opacity;
 
         @include focus-hover {
-          color: $btn-color;
+          background-color: transparent;
+          opacity: 1;
         }
       }
     }
