convert fa download to md file download

--- a/scss/common/_material-icons.scss
+++ b/scss/common/_material-icons.scss
@@ -82,6 +82,10 @@
   @include material-icons('radio_button_checked');
 }
 
+.fa-download {
+  @include material-icons('file_download');
+}
+
 .fa-ellipsis-h {
   @include material-icons('more_horiz');
 }
