conver fa angle down down to md arrow drop down

--- a/scss/common/_material-icons.scss
+++ b/scss/common/_material-icons.scss
@@ -1,3 +1,7 @@
+.fa-angle-double-down {
+  @include material-icons('arrow_drop_down');
+}
+
 .fa-arrow-down {
   @include material-icons('arrow_downward');
 }
